--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "html-webpack-plugin": "^5.5.0",
     "sass-loader": "^13.2.1",
     "style-loader": "^3.3.2",
+    "svg-loader": "^0.0.2",
+    "svg-url-loader": "^8.0.0",
     "webpack": "^5.76.2",
     "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^5.0.1",
