--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "private": true,
+  "repository": {
+    "url": "git+https://github.com/jamescrutchley/Planner.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "watch": "webpack --progress --watch",
-    "dev": "webpack serve"
+    "dev": "webpack serve",
+    "predeploy": "npm run build",
+   "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
